1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (APPLIBS): Remove.
	(DATAFILES): For ant.png.
	(SWARMHOME): Bump default to 1998-08-19.

	* Heatbug.m ([Heatbug -_getPixmap_:]): Set directory using
	application config path.
	
1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile: Include Makefile.appl from $(SWARMHOME)/etc/swarm.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Bump default to 1.2.

1998-07-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* README: Note -DUSE_PIXMAP.  Remove text about replacement files.

1998-06-23  Alex Lancaster <alex@santafe.edu>

	* COPYING, README:  New files, replacements for LICENCE and READ.ME, 
	respectively.

1998-04-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* HeatbugModelSwarm.h (Swarm): 

1998-04-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* HeatbugObserverSwarm.h (HeatbugObserverSwarm): Instead of being
	statically typed, unhappyGraph conform to EZGraph protocol (in
	analysis), heatDisplay conform to the HeatDisplay protocol
	and heatbugDisplay conform to the Object2dDisplay protocol (both
	in space).

	* HeatbugModelSwarm.m: Include space.h.  Make getWorld 
	return id that conforms to Grid2d protocol.

	* HeatbugModelSwarm.h: Don't include activity.h, collections.h,
	or objectbase.h.
	(HeatbugModel): Use id <Grid2d> instead of statically
	typing world.  Same for get method.

	* Heatbug.h (Heatbug): Make world an object that conforms to
	the Grid2d protocol, rather than being statically typed.

	* Heatbug.[hm]: ([Heatbug setWorld:Heat:]): Make the world
	argument (first) be an objec that conforms to the Grid2d protocol,
	rather than being statically ttyped to Grid2d.

1998-04-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m (main): Change comment that says batchmode is
	indicated by swarmGUIMode being 1; batchmode is indicated
	by swarmGUIMode being 0.

1998-04-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
